[package]
name = "lightning_rs_webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-http = "3.3.1"
actix-web = "4.3.1"
anyhow = "1.0.71"
deadpool-postgres = "0.10.5"
derive_more = "0.99.17"
dotenv = "0.15.0"
env_logger = "0.9.3"
futures-util = "0.3.28"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.17"
ring = "0.16.20"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio-postgres = "0.7.8"
url = "2.3.1"
